--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -136,7 +136,7 @@
                                 <color key="separatorColor" red="0.1215686275" green="0.47843137250000001" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BookListTableViewCell" rowHeight="173" id="fGp-zF-JUz" customClass="BookListTableViewCell" customModule="Goldence" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BookListTableViewCell" rowHeight="173" id="fGp-zF-JUz" customClass="BookListTableViewCell" customModule="Goldence" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="173"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fGp-zF-JUz" id="Zep-6C-6Yl">
@@ -271,23 +271,15 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="155"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paper-tape" translatesAutoresizingMaskIntoConstraints="NO" id="4an-8K-DO9">
-                                                    <rect key="frame" x="5" y="5" width="130" height="145"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="130" id="2Zn-4G-8Vz"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="我常常一個人走很長的路，在起風的時候覺得自己像一片落葉。仰望星空我想知道，有人正從世界的某個地方朝我走來嗎？" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AGO-r1-t1u">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" text="我常常一個人走很長的路，在起風的時候覺得自己像一片落葉。仰望星空我想知道，有人正從世界的某個地方朝我走來嗎？" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AGO-r1-t1u">
                                                     <rect key="frame" x="143" y="47" width="242" height="103"/>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="04m-UW-Glz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="04m-UW-Glz">
                                                     <rect key="frame" x="143" y="15.999999999999998" width="170" height="20.333333333333329"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="170" id="gAs-TB-tm5"/>
-                                                    </constraints>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -313,14 +305,8 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="4an-8K-DO9" firstAttribute="top" secondItem="pbp-Nd-Elz" secondAttribute="top" constant="5" id="7Um-Zs-j6v"/>
-                                                <constraint firstItem="4an-8K-DO9" firstAttribute="leading" secondItem="pbp-Nd-Elz" secondAttribute="leading" constant="5" id="9Qb-iD-7IR"/>
-                                                <constraint firstItem="04m-UW-Glz" firstAttribute="top" secondItem="pbp-Nd-Elz" secondAttribute="top" constant="16" id="CZj-dt-o8S"/>
-                                                <constraint firstItem="AGO-r1-t1u" firstAttribute="leading" secondItem="4an-8K-DO9" secondAttribute="trailing" constant="8" id="Dq4-g1-MwK"/>
-                                                <constraint firstItem="04m-UW-Glz" firstAttribute="leading" secondItem="4an-8K-DO9" secondAttribute="trailing" constant="8" id="IfC-4S-Ke7"/>
                                                 <constraint firstItem="AGO-r1-t1u" firstAttribute="top" secondItem="C9q-el-iYU" secondAttribute="bottom" constant="5" id="JsA-6u-oLG"/>
                                                 <constraint firstAttribute="trailing" secondItem="C9q-el-iYU" secondAttribute="trailing" constant="8" id="R8J-Me-gi3"/>
-                                                <constraint firstAttribute="bottom" secondItem="4an-8K-DO9" secondAttribute="bottom" constant="5" id="YVO-hA-TfN"/>
                                                 <constraint firstItem="C9q-el-iYU" firstAttribute="top" secondItem="pbp-Nd-Elz" secondAttribute="top" constant="16" id="Zi4-FJ-44y"/>
                                                 <constraint firstAttribute="trailing" secondItem="AGO-r1-t1u" secondAttribute="trailing" constant="8" id="jjE-QG-Rpw"/>
                                                 <constraint firstAttribute="bottom" secondItem="AGO-r1-t1u" secondAttribute="bottom" constant="5" id="lLk-yQ-l09"/>
@@ -328,7 +314,6 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="goldenceContent" destination="AGO-r1-t1u" id="EwZ-A2-bnV"/>
-                                            <outlet property="goldenceImage" destination="4an-8K-DO9" id="0UA-Lf-Vkt"/>
                                             <outlet property="goldenceTitle" destination="04m-UW-Glz" id="6aY-Yv-NKL"/>
                                             <outlet property="shareButton" destination="C9q-el-iYU" id="XwZ-2f-n7a"/>
                                             <segue destination="HUH-B7-jFq" kind="show" identifier="editGoldence" id="pTR-E1-t7z"/>
